--- a/index.html
+++ b/index.html
@@ -9,105 +9,14 @@
 
 <head>
         <title>Peerapat tassanaiyana</title>
+        <link rel="stylesheet" href="styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
                 rel="stylesheet">
 </head>
 
-<style>
-        body{
-                background-image:url(bg.jpg);
-        }
-        .container {
-                width: 60%;
-                margin: auto;
-                background: rgba(255, 255, 255, 0.863);
-                padding: 20px;
-                box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-                margin-top: 50px;
-        }
 
-        /* ปรับรูปภาพ */
-        .profile-pic {
-                width: 150px;
-                height: 150px;
-                border-radius: 50%;
-                /* ทำให้รูปภาพเป็นวงกลม */
-                margin: auto;
-                display: block;
-                border: 3px solid #ddd;
-                /* เพิ่มเส้นขอบสีเทาอ่อน */
-                box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-                /* เพิ่มเงาเล็กน้อย */
-        }
-
-        body {
-                font-family: "Chakra Petch", sans-serif;
-                font-weight: 300;
-                background-color: #f4f4f4;
-                margin: 0;
-                padding: 0;
-        }
-
-        h1,
-        h2,
-        h3 {
-                font-family: "Chakra Petch", sans-serif;
-                font-weight: 500;
-                text-align: center;
-        }
-
-
-
-
-
-
-        p {
-                font-family: "IBM Plex Sans Thai", sans-serif;
-                font-weight: 400;
-                /* Light */
-                text-align: center;
-                color: #666;
-        }
-
-        .section {
-                margin-bottom: 20px;
-        }
-
-        .section h3 {
-                border-bottom: 2px solid #ddd;
-                padding-bottom: 5px;
-        }
-
-        .section ul {
-                list-style-type: none;
-                padding: 0;
-        }
-
-        .section ul li {
-                font-family: "IBM Plex Sans Thai", sans-serif;
-                font-weight: 400;
-                /* Light */
-                margin-bottom: 10px;
-        }
-
-        button {
-                font-family: "Merriweather", sans-serif;
-                font-weight: 500;
-                /* Light */
-                background-color: #4CAF50;
-                color: white;
-                border: none;
-                padding: 10px 20px;
-                border-radius: 5px;
-                cursor: pointer;
-        }
-
-        button:hover {
-                background-color: #45a049;
-        }
-</style>
 
 
 
